--- a/frontweb/src/pages/ProductDetails/styles.css
+++ b/frontweb/src/pages/ProductDetails/styles.css
@@ -1,19 +1,21 @@
 .product-details-container{
     padding: 10px;
-    border: 1px solid red;
     font-size: 24px;
 
 }
 
-.product-details-card{
-    padding: 10px;
+.go-back-container{
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-bottom: 10px;
 
 }
 
 .go-back-container{
-    border: 1px solid greenyellow;
     display: flex;
     align-items: center;
+    margin-left: 10px;
     margin-bottom: 10px;
 
 
@@ -36,17 +38,20 @@
 .img-container{
     text-align: center;
     margin-bottom: 20px;
+    border: 1px solid #E1E1E1;
+    border-radius: 20px;
+    padding: 10px;
+    
 }
 .img-container img{
     width: 80%;    
-    border: 1px solid purple;
+
 
 }
 
 .name-price-container{
     margin-bottom: 20px;
-    border: 1px solid blue;
-
+    
 }
  
 .name-price-container h1{
@@ -54,8 +59,15 @@
     letter-spacing: -0.015em;
     
 }
+
+/*****************  description **************/
+.description-container {
+    border: 1px solid #E1E1E1;
+    border-radius: 20px;
+    padding: 10px;
+    
+}
 .description-container h2{
-    border: 1px solid rebeccapurple;
     color: #9E9E9E;
     letter-spacing: -0.015em;
     font-size: 0.8em;
@@ -67,4 +79,69 @@
     letter-spacing: -0.015em;
     font-size: 0.6em;
     
+}
+/*****************  media 576px **************/
+@media( min-width: 576px){
+    .product-details-container{
+        padding: 20px;
+        font-size: 32px;
+    }
+    
+    .product-details-card{
+        padding: 20px;
+
+    }
+
+
+}
+/*****************  media 992px **************/
+@media( min-width: 992px){
+    .product-details-container{
+        padding: 40px;
+    }
+    
+    .product-details-card{
+        padding: 40px;
+
+    }
+    .product-details-container{
+        padding: 40px;
+    }
+    .img-container img{
+        width: 50%;    
+    
+    
+    }
+    .name-price-container{
+        display:flex;
+        justify-content: space-between;
+    }
+
+}
+/*****************  media 1200px **************/
+@media( min-width: 1200px){
+    .name-price-container{
+        display:block;
+        
+
+    }
+ .img-container img{
+        width: auto;    
+        height: 280px;
+       
+    }
+    .description-container{
+        min-height: 302px;
+    }
+}
+/*****************  media 1400px **************/
+@media( min-width: 1400px){
+    .img-container img{
+        width: auto;    
+        height: 480px;
+       
+    }
+    .description-container{
+        min-height: 502px;
+    }
 }
